--- a/caculator/index.html
+++ b/caculator/index.html
@@ -12,29 +12,28 @@
         <input type="text" id="display" class="display" disabled>
         <div class="buttons">
             <button class="btn" id="clear">C</button>
+            <button class="btn">(</button>
+            <button class="btn">)</button>
             <button class="btn">/</button>
-            <button class="btn">%</button>
-            <button class="btn">+</button>
 
             <button class="btn">7</button>
             <button class="btn">8</button>
             <button class="btn">9</button>
-            <button class="btn">-</button>
+            <button class="btn">*</button>
 
             <button class="btn">4</button>
             <button class="btn">5</button>
             <button class="btn">6</button>
-            <button class="btn">*</button>
+            <button class="btn">-</button>
 
             <button class="btn">1</button>
             <button class="btn">2</button>
             <button class="btn">3</button>
-            <button class="btn">()</button> <!-- Parentheses Button -->
-
-            <button class="btn" id="equal">=</button>
+            <button class="btn">+</button>
 
             <button class="btn">0</button>
             <button class="btn">.</button>
+            <button class="btn" id="equal">=</button>
         </div>
     </div>
 
